--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="banner">
        <div class="header-info">
         <h1 class="header-h1">All Thinks Are <br> Possible If You <br> believe</h1>
         <p class="header-para">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
@@ -21,7 +21,7 @@
         <!-- part 1  -->
         <section class="first-section">
             <div class="humen-img">
-                <img src="/images/person.png" alt="my-img">
+                <img src="./images/person.png" alt="my-img">
             </div>
             <div class="my-failyears">
                 <h1 class="failures-head">My failures of <br> previous year</h1>
@@ -50,24 +50,24 @@
             <h1 class="part2">My Plans</h1>
             <div class="all-plan">
                 <div class="my-plan">
-                    <img src="/images/icons/web.png" alt="web">
+                    <img src="./images/icons/web.png" alt="web">
                     <h3>Web Development</h3>
                     <p>I want to start</p>
                 </div>
                 <div class="my-plan">
-                    <img src="/images/icons/js.png" alt="web">
+                    <img src="./images/icons/js.png" alt="web">
                     <h3>javascript</h3>
                     <p>I want to learn</p>
                 </div>
                 <div class="my-plan">
-                    <img src="/images/icons/smoke.png" alt="web">
+                    <img src="./images/icons/smoke.png" alt="web">
                     <h3>Smoking Habit</h3>
                     <p>I want to end</p>
                 </div>
                 <div class="my-plan">
-                    <img src="/images/icons/ecom.png" alt="web">
+                    <img src="./images/icons/ecom.png" alt="web">
                     <h3>ecommerce</h3>
-                    <p>I want to develop</p>
+                    <p>I want to develope</p>
                 </div>
             </div>
         </section>
@@ -87,9 +87,9 @@
             <p>Email : info@gmail.com</p>
             <p>Phone : 01500 00 00 00</p>
             <div class="midea">
-                <img class="img" src="/images/icons/fb.png" alt="fb">
-                <img class="img" src="/images/icons/twitter.png" alt="twitter">
-                <img class="img" src="/images/icons/youtube.png" alt="youtube">
+                <img class="img" src="./images/icons/fb.png" alt="fb">
+                <img class="img" src="./images/icons/twitter.png" alt="twitter">
+                <img class="img" src="./images/icons/youtube.png" alt="youtube">
             </div>
         </div>
         <div class="Email">
