--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="banner">
+    <header>
        <div class="header-info">
         <h1 class="header-h1">All Thinks Are <br> Possible If You <br> believe</h1>
         <p class="header-para">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
