--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>All Thinks Are Possible If You believe</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-        <button>Contact Us</button>
+       <div class="header-info">
+        <h1 class="header-h1">All Thinks Are <br> Possible If You <br> believe</h1>
+        <p class="header-para">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+        <button class="header-btn">Contact Us</button>
+       </div>
     <main></main>
     <footer></footer>
 </body>
