--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p class="header-para">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
         <button class="header-btn">Contact Us</button>
        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
