main section patr1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new-year-new-me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@300&family=Oswald&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/51d09f34cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +17,33 @@
         <button class="header-btn">Contact Us</button>
        </div>
     </header>
-    <main></main>
+    <main>
+        <section class="first-section">
+            <div class="humen-img">
+                <img src="/images/person.png" alt="my-img">
+            </div>
+            <div class="my-failyears">
+                <h1 class="failures-head">My failures of <br> previous year</h1>
+                <p class="failures-p">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+                <ul class="main-option">
+                    <li>
+                        <i class="fa-regular fa-circle-check"></i>Contrary to popular belief, is not simply.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-check"></i>Contrary to popular belief.
+                        </li>
+                    <li>
+                        <i class="fa-regular fa-circle-check"></i>Contrary to popular , is not simply.</li>
+                    <li>
+                        <i class="fa-regular fa-circle-check"></i>Contrary to popular belief, is not simply.
+                    </li>
+                    <li>
+                        <i class="fa-regular fa-circle-check"></i>Contrary to popular belief.
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
