--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
        </div>
     </header>
     <main>
+        <!-- part 1  -->
         <section class="first-section">
             <div class="humen-img">
                 <img src="/images/person.png" alt="my-img">
@@ -43,7 +44,59 @@
                 </ul>
             </div>
         </section>
+
+        <!-- part 2 -->
+        <section >
+            <h1 class="part2">My Plans</h1>
+            <div class="all-plan">
+                <div class="my-plan">
+                    <img src="/images/icons/web.png" alt="web">
+                    <h3>Web Development</h3>
+                    <p>I want to start</p>
+                </div>
+                <div class="my-plan">
+                    <img src="/images/icons/js.png" alt="web">
+                    <h3>javascript</h3>
+                    <p>I want to learn</p>
+                </div>
+                <div class="my-plan">
+                    <img src="/images/icons/smoke.png" alt="web">
+                    <h3>Smoking Habit</h3>
+                    <p>I want to end</p>
+                </div>
+                <div class="my-plan">
+                    <img src="/images/icons/ecom.png" alt="web">
+                    <h3>ecommerce</h3>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- part 3 -->
+        <section class="backpart">
+            <div class="part3">
+                <h1 class="gredien">Awlays keep a positive <br> mindset</h1>
+                <button class="call-btn">Call Now</button>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer">
+            <h1>Future</h1>
+            <p>There are many variations of passages of Lorem <br> Ipsum available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+            <div class="midea">
+                <img class="img" src="/images/icons/fb.png" alt="fb">
+                <img class="img" src="/images/icons/twitter.png" alt="twitter">
+                <img class="img" src="/images/icons/youtube.png" alt="youtube">
+            </div>
+        </div>
+        <div class="Email">
+            <h1>Subscribe</h1>
+            <input type="email" name="email" id="email" placeholder="Enter your email"><br>
+            <button class="Subscribe">Subscribe</button>
+        </div>
+    </footer>
 </body>
 </html>
